--- a/campaign_page.html
+++ b/campaign_page.html
@@ -142,20 +142,20 @@
     <h2>Tilmeld dig vores nyhedsbrev og få en gratis øl-coin</h2>
   <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
   <div class="mc-field-group">
-    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+    <label for="mce-EMAIL">Emailadresse  <span class="asterisk">*</span>
   </label>
     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
   </div>
   <div class="mc-field-group">
-    <label for="mce-FNAME">First Name </label>
+    <label for="mce-FNAME">Fornavn </label>
     <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
   </div>
   <div class="mc-field-group">
-    <label for="mce-LNAME">Last Name </label>
+    <label for="mce-LNAME">Efternavn </label>
     <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
   </div>
   <div class="mc-field-group size1of2">
-    <label for="mce-BIRTHDAY-month">Birthday </label>
+    <label for="mce-BIRTHDAY-month">Fødselsdag </label>
     <div class="datefield">
       <span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> / 
       <span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span> 
@@ -163,15 +163,15 @@
     </div>
   </div><div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
       <div class="content__gdpr">
-          <label>Marketing Permissions</label>
-          <p>Please select all the ways you would like to hear from FC Nordsjælland:</p>
+          <label>Marketingstilladelser</label>
+          <p>Vælg venligst hvordan FC Nordsjælland må kontakte dig:</p>
           <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
       <label class="checkbox subfield" for="gdpr_367414"><input type="checkbox" id="gdpr_367414" name="gdpr[367414]" value="Y" class="av-checkbox gdpr"><span>Nyheder, tilbud og lanceringer</span> </label><label class="checkbox subfield" for="gdpr_367418"><input type="checkbox" id="gdpr_367418" name="gdpr[367418]" value="Y" class="av-checkbox gdpr"><span>Spørgeskemaer, undersøgelser, mm</span> </label><label class="checkbox subfield" for="gdpr_367422"><input type="checkbox" id="gdpr_367422" name="gdpr[367422]" value="Y" class="av-checkbox gdpr"><span>Alle nyhedsbreve fra FC Nordsjælland</span> </label>
           </fieldset>
-          <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+          <p>Du kan framelde dig vores nyhedsbreve i bunden af hver email. For information om privatlivspolitik, besøg venligst Mailchimps hjemmeside.</p>
       </div>
       <div class="content__gdprLegal">
-          <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/terms" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
+          <p>Vi bruger Mailchimp som marketing platform. Ved at trykke tilmeld nedenfor, godkender du at Mailchimp får adgang til dine informationer. <a href="https://mailchimp.com/legal/terms" target="_blank"><br>Learn more about Mailchimp's privacy practices here.</a></p>
       </div>
   </div>
     <div id="mce-responses" class="clear foot">
@@ -181,7 +181,7 @@
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_82204051a0f5e1bb14d2ddb4f_ec029714ca" tabindex="-1" value=""></div>
           <div class="optionalParent">
               <div class="clear foot">
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  <input type="submit" value="Tilmeld" name="subscribe" id="mc-embedded-subscribe" class="button">
                   <p class="brandingLogo"><a href="http://eepurl.com/h28TQX" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
               </div>
           </div>
