--- a/content_portfolio.html
+++ b/content_portfolio.html
@@ -99,7 +99,7 @@
     <img load="lazy" src="assets/SoMe_content/Pommes frittes i boderne.jpg" alt="instagram post om fritter i boderne">
     <img load="lazy" src="assets/SoMe_content/Hej flemming-post.jpg" alt="Instagram post der introducerer træner Flemming">
     <img load="lazy" src="assets/SoMe_content/Hvilken en er du-post (IG).jpg" alt="instagram post med hvilken-en-er-du-trend">
-    <img load="lazy" src="assets/SoMe_content/Superligaens billigeste priser.jpg" alt="instagram om superligaen billigeste priser">
+    <img load="lazy" src="assets/SoMe_content/Superligaens billigeste priser.png" alt="instagram om superligaen billigeste priser">
     <img load="lazy" src="assets/SoMe_content/Ambitionsdag-post.jpg" alt="instagram post om ambitionsdag på Right To Dream Park">
 
     <h3>Stories</h3>
