--- a/content_portfolio.html
+++ b/content_portfolio.html
@@ -132,7 +132,7 @@
 <img load="lazy" src="assets/SoMe_content/nyhedsbrev-velkommen.png" alt="billede af velkomstmail">
 <img load="lazy" src="assets/SoMe_content/nyhedsbrev-Mød Nordsjælland UNG.png" alt="nyhedsbrev der introducerer FCN ungdomskort">
 <img load="lazy" src="assets/SoMe_content/nyhedsbrev-første event.png" alt="nyhedsbrev om sæsonens første event">
-<img load="lazy" src="assets/SoMe_content/nyhedsbrev-ses vi i aften?.png" alt="nyhedsbrev om aftenens kamp">
+<img load="lazy" src="assets/SoMe_content/nyhedsbrev-ses vi i aften.png" alt="nyhedsbrev om aftenens kamp">
 <img load="lazy" src="assets/SoMe_content/nyhedsbrev-fornyelse.png" alt="nyhedsbrev om sæsonkort fornyelse"></div>
 <div class="ads"><h2>Ads</h2>
         <h3>Posts</h3>
